# memory-in-agentic-ai

./: .gitignore  README.md  app.py  memory_agent.py  pyproject.toml  requirements.txt
notebooks/: mem0.ipynb
