[project]
name = "mem0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "mem0ai>=2.0.8",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
